[package]
name = "actix-surrealdb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
thiserror = "1.0.57"
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
actix-cors = "0.7.0"
once_cell = "1.19.0"
